[gd_scene load_steps=5 format=3 uid="uid://nk8sdba2ikmp"]

[ext_resource type="Script" path="res://settings/settings.gd" id="1_luiv8"]
[ext_resource type="AudioStream" uid="uid://b5c8yh0veo6xr" path="res://Mus/Little Night song faster.mp3" id="2_tmq1f"]
[ext_resource type="AudioStream" uid="uid://bqbfrlp3u2aso" path="res://Mus/Little Night song normal.mp3" id="3_irfq1"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uy7ys"]
streams_count = 2
stream_0/stream = ExtResource("2_tmq1f")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_irfq1")
stream_1/weight = 1.0

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_luiv8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="volume_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "volume"

[node name="volue" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "mute"

[node name="resolution_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "resolution
"

[node name="resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_uy7ys")
autoplay = true

[node name="exit" type="Button" parent="."]
layout_mode = 2
offset_top = 604.0
offset_right = 84.0
offset_bottom = 648.0
text = "exit"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/volue" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/mute" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
